public/css/default.css
/* ... */
.ui-notifications .fa { margin-right: 3px; }
.ui-notifications-clear { margin: 15px 0 0 10px; font-size: 11px; cursor: pointer; color: silver; }
.light .ui-notifications-clear { color: black; }
.ui-notifications-clear:hover { text-decoration: underline; }
.ui-notifications-message { background-color: #303030; margin: 10px; padding: 0; border-radius: 3px; font-size: 12px; box-shadow: 0 1px 5px rgba(0,0,0,0.03); cursor: pointer; transition: all 0.3s; border: 1px solid #3BAFDA; }
.light .ui-notifications-message { background-color: white; }

.ui-notifications-success { border-color: #8CC152; }
.ui-notifications-success .ui-notifications-title  { border-bottom-color: #8CC152; background-color: #8CC152; }
.ui-notifications-success .ui-notifications-title img { border-bottom-color: #68A654; }

.ui-notifications-error { border-color: #E60000; }
.ui-notifications-error .ui-notifications-title  { border-bottom-color: #E60000; background-color: #E60000; }
.ui-notifications-error .ui-notifications-title img { border-bottom-color: #C1281E; }

.ui-notifications-date { float: right; font-size: 10px; margin: 7px 10px 0 0; color: white; }
.ui-notifications-title img { border: 1px solid #3BAFDA; border-radius: 3px; margin-right: 5px; vertical-align: middle; }
.ui-notifications-title { font-size: 13px; border-bottom: 1px solid #3BAFDA; padding: 5px 10px; color: white; background-color: #3BAFDA; }
.ui-notifications-padding { padding: 0 10px; }
.ui-notifications-body { line-height: 14px; font-size: 12px; margin-top: 10px; word-break: break-word; }
.ui-notifications button { display: inline-block; position: relative; border-radius: 2px; outline: 0; font-size: 11px; color: white; font-weight: bold; padding: 2px 10px; margin-bottom: 10px; border: 1px solid white; background: transparent; }
.ui-notifications button:hover { opacity: 0.9; }
.ui-notifications-remove { transform: scale(0.5); opacity: 0; }

.light .ui-notifications button { color: black; border-color: black; }

.panel { background-color: white; border-radius: 3px; box-shadow: 0 3px 30px rgba(0,0,0,0.03); border: 1px solid #E0E0E0; }
.panel > label { display: block; padding: 15px 20px; border-bottom: 1px solid #E0E0E0; font-size: 16px; color: black; font-weight: bold; }
.panel > label .fa { margin-right: 5px; }

.button { background-color: #4285F4; border: 0; color: white; cursor: pointer; outline: 0; width: 100%; border-radius: 4px; height: 50px; text-transform: uppercase; }
.button:hover { box-shadow: 0 2px 5px rgba(0,0,0,0.1); opacity: 0.9; }
.button:disabled { background-color: #F0F0F0; color: silver; cursor: not-allowed; box-shadow: none; opacity: 1; }
.button .fa { margin-right: 5px; }

.success { background-color: #8CC152; color: white; padding: 10px 20px; font-size: 12px; text-align: center; }
.success .fa { margin-right: 8px; }

.buttons > div { position: relative; display: inline-block; width: 33.33%; vertical-align: top; padding: 5px; }
.buttons button { width: 100%; margin: 0; padding: 0; font-size: 11px; height: 60px; background-color: #F0F0F0; border: 0; border-radius: 4px; overflow: hidden; text-transform: overflow; white-space: nowrap; }
.buttons button .fa { font-size: 25px; display: block; }
.buttons button:hover { background-color: #E0E0E0; }

@media(max-width: 700px) {
	header { box-shadow: none; height: 45px; }
	.ui-notifications { width: auto; left: 0; }
	.form-border { border-left: 0; }
	.nplr-xs { padding-left: 0 !important; padding-right: 0 !important; }
	.startmenu { width: 100%; border-radius: 0; top: 45px; height: auto; }
	.startmenu-nav { width: 100%; bottom: 50px; }
	.startmenu-apps { margin-right: 0; }
	.startmenu-apps-container { width: 100%; position: relative; height: 210px; }
	.startmenu-version { display: none; }
	.app { margin-right: 0; }
	.app-icon { width: 50px; }
	.app-meta { margin-left: 60px; }
	.app-name { font-size: 16px; margin-bottom: 3px; }
	.startmenu-search { padding: 2px 5px; }
	.startmenu-search .ui-textbox { height: 40px; }
	.startmenu-search .ui-textbox-input { padding: 11px 4px 0 10px; }
	.startmenu-search .ui-textbox input { font-size: 16px; }
	.startmenu-search .ui-textbox-control { width: 40px; }
	.startmenu-title button { display: block; outline: 0; width: 25px; height: 25px; padding: 0; }
	.startmenu-nav nav button { padding: 10px 0; font-size: 16px; }
	.startmenu-nav .fa { width: 34px; }
	.app .appbadge { position: absolute; margin: 27px 0 0 22px; }
	.username { right: 0; left: 0; text-align: center; }
	.startmenu-title img { display: none; }
	.startmenu-title > span { display: none; }
	.startmenu-status { float: left; width: 70%; background-color: transparent; border-left: 0; }
	.ui-notifications { border-left: 0; }
}

